--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,38 @@
     transform: rotate(360deg);
   }
 }
+.meme {
+  position: absolute;
+  left: 0;
+  right: 0;
+  margin-left: auto;
+  margin-right: auto;
+}
+.meme span {
+  position: absolute;
+  width: 100%;
+  left: 0px;
+  font-size: 38px;
+  color: white;
+  /* text-shadow: 0 0 10px #000; */
+  text-shadow: 2px 0 0 #000, -2px 0 0 #000, 0 2px 0 #000,
+    0 -2px 0 rgb(255 250 250), 1px 1px #000, -1px -1px 0 #000, 1px -1px 0 #000,
+    -1px 1px 0 #000;
+}
+
+#span1 {
+  top: 50px;
+}
+
+#span2 {
+  bottom: 50px;
+}
+.meme img {
+  width: 100%;
+}
+
+body,
+.meme {
+  background: black;
+  align-items: center;
+}
